<resources>
    <string name="app_name" translatable="false">2.1 - UserInput Live</string>


    <string name="generate">generate</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="polite">polite</string>

    <string name="greeting_polite">We welcome you to the Mandarin Hotel %1$s %2$s! We
    wish you a pleasent stay.</string>
    <string name="greeting_normal">Hey %1$s welcome to the Mandarin! Enjoy your stay. </string>
</resources>