<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88E8BBBB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/primaryColor"
        android:fontFamily="serif"
        android:text="Hotel  Mandarin"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_edit"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/surname_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/name_edit"
        app:layout_constraintStart_toStartOf="@+id/name_edit"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <Button
        android:id="@+id/generate_button"
        style="@style/RoundButtonWithStrokeStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="@+id/surname_edit"
        app:layout_constraintStart_toStartOf="@+id/surname_edit"
        app:layout_constraintTop_toBottomOf="@+id/polite_switch"
        app:strokeColor="#232323"
        app:strokeWidth="2dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/polite_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/polite"
        app:layout_constraintStart_toStartOf="@+id/surname_edit"
        app:layout_constraintTop_toBottomOf="@+id/surname_edit" />

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#75B6A9A9"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintTop_toBottomOf="@+id/generate_button"
        tools:text="@string/greeting_polite" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text"
        app:srcCompat="@drawable/_200px_logo_mandarin_oriental_svg" />

</androidx.constraintlayout.widget.ConstraintLayout>